--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Defining server port for spring boot application
 server.port=${PORT:8081}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
